--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>SimpleKafkaProducer</module>
         <module>SimpleKafkaConsumer</module>
+        <module>SimpleKafkaStringProducer</module>
     </modules>
 
     <properties>
